# gst-removesilence

./: README.md  meson.build
gst-plugin/: meson.build
gst-plugin/src/: gstremovesilence.c  gstremovesilence.h
